--- a/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
@@ -62,70 +62,70 @@
                             <p:inputText id="title"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.title}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="userDn" value="#{msgs.userDN}"/>
                             <p:inputText id="userDn"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.userDN}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="homeDirectory" value="homeDirectory"/>
                             <p:inputText id="homeDirectory"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.homeDirectory}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="gidNumber" value="gidNumber"/>
                             <p:inputText id="gidNumber"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.gidNumber}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="objectClasses" value="objectClasses"/>
                             <p:inputText id="objectClasses"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.objectClasses}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="sambaSid" value="sambaSID"/>
                             <p:inputText id="sambaSid"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.sambaSID}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="sn" value="sn"/>
                             <p:inputText id="sn"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.sn}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="uid" value="uid"/>
                             <p:inputText id="uid"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.uid}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="description" value="description"/>
                             <p:inputText id="description"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.description}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="displayName" value="displayName"/>
                             <p:inputText id="displayName"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.displayName}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                     </p:row>
                     <p:row>
@@ -134,63 +134,63 @@
                             <p:inputText id="gecos"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.gecos}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="loginShell" value="loginShell"/>
                             <p:inputText id="loginShell"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.loginShell}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="sambaAcctFlags" value="sambaAcctFlags"/>
                             <p:inputText id="sambaAcctFlags"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.sambaAcctFlags}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="sambaLogonScript" value="sambaLogonScript"/>
                             <p:inputText id="sambaLogonScript"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.sambaLogonScript}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="sambaPrimaryGroupSid" value="sambaPrimaryGroupSID"/>
                             <p:inputText id="sambaPrimaryGroupSid"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.sambaPrimaryGroupSID}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="sambaPwdMustChange" value="sambaPwdMustChange"/>
                             <p:inputText id="sambaPwdMustChange"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.sambaPwdMustChange}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="sambaPasswordHistory" value="sambaPasswordHistory"/>
                             <p:inputText id="sambaPasswordHistory"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.sambaPasswordHistory}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="sambaLogonHours" value="sambaLogonHours"/>
                             <p:inputText id="sambaLogonHours"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.sambaLogonHours}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="sambaKickoffTime" value="sambaKickoffTime"/>
                             <p:inputText id="sambaKickoffTime"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.sambaKickoffTime}"
-                                         required="true"/>
+                                         required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                     </p:row>
                 </p:panelGrid>
