Transform project archived state to project active state and unify displayed information in list and edit views

--- a/Kitodo/src/main/webapp/pages/inc_editProjects/detailsTab.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_editProjects/detailsTab.xhtml
@@ -72,10 +72,10 @@
                         showOn="button"/>
 
             <h:outputText id="vwid36a"
-                          value="#{msgs.projectIsArchived}: "/>
+                          value="#{msgs.active}: "/>
             <h:selectBooleanCheckbox id="vwid37b"
                                      style="margin-right:15px"
-                                     value="#{ProjekteForm.myProjekt.projectIsArchived}"/>
+                                     value="#{ProjekteForm.myProjekt.active}"/>
 
         </h:panelGrid>
 
