--- a/Kitodo/src/main/webapp/pages/users.xhtml
+++ b/Kitodo/src/main/webapp/pages/users.xhtml
@@ -20,7 +20,7 @@
     <ui:define name="contentHeader">
         <h3>#{msgs.users}</h3>
         <h:form id="newElementForm"
-                rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityForAny('addUser, addUserGroup, addLdapGroup')}">
+                rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityForAny('addUser, addUserGroup')}">
             <p:menuButton value="#{msgs.newElement}" id="newElementButton" icon="fa fa-plus-circle fa-lg"
                           iconPos="right" styleClass="button-filled-green">
                 <p:menuitem value="#{msgs.newUser}" id="newUserButton"
@@ -30,7 +30,6 @@
                             rendered="#{SecurityAccessController.isAdminOrHasAuthorityForAny('addUserGroup')}"
                             action="#{BenutzergruppenForm.newUserGroup}" icon="ui-icon-plusthick"/>
                 <p:menuitem value="#{msgs.newLdapGroup}" id="newLdapGroupButton" action="#{LdapGruppenForm.Neu}"
-                            rendered="#{SecurityAccessController.isAdminOrHasAuthorityForAny('addLdapGroup')}"
                             icon="ui-icon-plusthick"/>
             </p:menuButton>
         </h:form>
@@ -47,8 +46,7 @@
                    rendered="#{SecurityAccessController.isAdminOrHasAuthorityForAny('viewAllUserGroups')}">
                 <ui:include src="/WEB-INF/templates/includes/users/usergroupList.xhtml"/>
             </p:tab>
-            <p:tab title="#{msgs.ldapgruppen}"
-                   rendered="#{SecurityAccessController.isAdminOrHasAuthorityForAny('viewAllLdapGroups')}">
+            <p:tab title="#{msgs.ldapgruppen}">
                 <ui:include src="/WEB-INF/templates/includes/users/ldapgroupList.xhtml"/>
             </p:tab>
         </p:tabView>
