--- a/Kitodo/src/main/webapp/pages/clients.xhtml
+++ b/Kitodo/src/main/webapp/pages/clients.xhtml
@@ -18,7 +18,7 @@
 
     <ui:define name="contentHeader">
         <h3>#{msgs.clients}</h3>
-        <h:form id="clientForm">
+        <h:form id="clientForm" rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('addClient')}">
             <p:commandButton value="#{msgs.newElement}" icon="fa fa-plus-circle fa-lg" iconPos="right"
                              action="#{ClientForm.newClient}" id="newClientButton"
                              styleClass="button-filled-green">
@@ -41,7 +41,8 @@
                         <h:outputText value="#{item.name}"/>
                     </p:column>
                     <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
-                        <h:link outcome="clientEdit" title="#{msgs.clientEdit}">
+                        <h:link outcome="clientEdit" title="#{msgs.clientEdit}"
+                                rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('viewClient',item.id)}">
                             <f:param name="id" value="#{item.id}"/>
                             <i class="fa fa-pencil-square-o fa-lg"/>
                         </h:link>
