--- a/Kitodo/src/main/webapp/pages/clientEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/clientEdit.xhtml
@@ -40,7 +40,7 @@
             <h:outputText value="#{msgs.clientView}"
                           rendered="#{isViewMode}"/>
         </h3>
-        <p:commandButton id="save"
+        <p:commandButton id="saveButton"
                          rendered="#{isEditMode || isCreateMode}"
                          widgetVar="save"
                          value="#{msgs.speichern}"
@@ -53,7 +53,7 @@
                          styleClass="button-filled-blue"/>
         <p:commandButton id="saveButtonToggler"
                          actionListener="#{ClientForm.setSaveDisabled(false)}"
-                         update="save"
+                         update="saveButton"
                          style="display:none;"/>
         <p:button value="#{msgs.abbrechen}" outcome="clients"
                   icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
@@ -63,8 +63,8 @@
         <p:tabView id="clientsTabView">
             <p:tab id="clientsTab" title="#{msgs.client}">
                 <p:panelGrid id="clientEdit-grid" columns="1" cellpadding="10" layout="grid">
-                    <p:outputLabel for="name" value="#{msgs.name}"/>
-                    <p:inputText id="name"
+                    <p:outputLabel for="nameInput" value="#{msgs.name}"/>
+                    <p:inputText id="nameInput"
                                  class="input"
                                  disabled="#{isViewMode}"
                                  placeholder="#{msgs.name}"
