--- a/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
@@ -85,6 +85,9 @@
                                         </p:selectOneMenu>
                                     </div>
                                     <p:pickList id="authoritiesGlobalPick"
+                                                showSourceFilter="true" showTargetFilter="true"
+                                                filterMatchMode="contains"
+                                                responsive="true"
                                                 value="#{BenutzergruppenForm.authorities}"
                                                 converter="#{authorityConverter}"
                                                 var="authority" itemLabel="#{authority.title}"
@@ -120,6 +123,9 @@
                                                 value="#{BenutzergruppenForm.authoritiesByCurrentClient}"
                                                 converter="#{authorityConverter}"
                                                 var="authority"
+                                                showSourceFilter="true" showTargetFilter="true"
+                                                filterMatchMode="contains"
+                                                responsive="true"
                                                 onTransfer="jQuery('#editForm\\:saveButtonToggler').click()"
                                                 itemLabel="#{authority.title}"
                                                 itemValue="#{authority}">
@@ -151,6 +157,9 @@
                                     <p:pickList id="authoritiesProjectPick"
                                                 value="#{BenutzergruppenForm.authoritiesByCurrentProject}"
                                                 converter="#{authorityConverter}"
+                                                showSourceFilter="true" showTargetFilter="true"
+                                                filterMatchMode="contains"
+                                                responsive="true"
                                                 var="authority"
                                                 onTransfer="jQuery('#editForm\\:saveButtonToggler').click()"
                                                 itemLabel="#{authority.title}"
