--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/Prozesse_Liste_Action.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/Prozesse_Liste_Action.xhtml
@@ -492,9 +492,9 @@
 
                                 <h:panelGrid columns="2" style="margin-left:40px">
 
-                                    <h:outputText value="#{msgs.showArchivedProjects}:"
+                                    <h:outputText value="#{msgs.showInactiveProjects}:"
                                                   rendered="#{(LoginForm.maximaleBerechtigung == 1)}"/>
-                                    <h:selectBooleanCheckbox value="#{ProzessverwaltungForm.showArchivedProjects}"
+                                    <h:selectBooleanCheckbox value="#{ProzessverwaltungForm.showInactiveProjects}"
                                                              rendered="#{(LoginForm.maximaleBerechtigung == 1)}"/>
 
                                     <h:outputText value="#{msgs.showClosedProcesses}:"/>
