--- a/Kitodo/src/main/webapp/pages/searchProcess.xhtml
+++ b/Kitodo/src/main/webapp/pages/searchProcess.xhtml
@@ -163,11 +163,12 @@
                         <p:column colspan="3"><p:inputText value="#{SearchForm.idin}" style="width:100%"/></p:column>
                     </p:row>
                     <p:row>
-                        <p:column><p:outputLabel value="#{msgs.showInactiveProjects}" rendered="#{(LoginForm.maximaleBerechtigung == 1)}"/></p:column>
+                        <p:column><p:outputLabel value="#{msgs.showInactiveProjects}"
+                                                 rendered="#{SecurityAccessController.isAdmin()}"/></p:column>
                         <p:column>
                             <p:selectBooleanCheckbox
-                                    value="#{ProzessverwaltungForm.showInactiveProjects}"
-                                    rendered="#{(LoginForm.maximaleBerechtigung == 1)}"/>
+                                value="#{ProzessverwaltungForm.showInactiveProjects}"
+                                rendered="#{SecurityAccessController.isAdmin()}"/>
                         </p:column>
                     </p:row>
                     <p:row>
