--- a/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
+++ b/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
@@ -12,7 +12,7 @@
 -->
 
 <ui:composition
-        template="/WEB-INF/templates/base.xhtml"
+        template="/WEB-INF/templates/baseEditView.xhtml"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
@@ -22,35 +22,32 @@
         <f:viewAction action="#{ProzessverwaltungForm.loadProcess(id)}" />
     </f:metadata>
 
-    <ui:define name="content">
-        <h:form>
-            <p:panel styleClass="content-header">
-                <h3>
-                    <h:outputText value="#{msgs.projektBearbeiten} (#{ProjekteForm.myProjekt.title})" rendered="#{not empty ProjekteForm.myProjekt.title}"/>
-                    <h:outputText value="#{msgs.einenNeuenProzessAnlegen}" rendered="#{empty ProjekteForm.myProjekt.title}"/>
-                </h3>
-                <p:commandButton value="#{msgs.speichern}" action="#{ProzesskopieForm.createNewProcess}" icon="fa fa-floppy-o fa-lg" iconPos="right" onclick="PF('notifications').renderMessage({'summary':'#{msgs.projectSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});" update="notifications"/>
-                <p:button value="#{msgs.abbrechen}" outcome="projects" icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
-            </p:panel>
-            <p:tabView>
-                <p:tab title="#{msgs.prozessdaten}">
+    <ui:define name="contentHeader">
+        <p:panel styleClass="content-header">
+            <h3>
+                <h:outputText value="#{msgs.einenNeuenProzessAnlegen} (#{msgs.prozessvorlage}: '#{ProzesskopieForm.prozessVorlage.title}')"/>
+            </h3>
+            <p:commandButton value="#{msgs.speichern}"
+                             action="#{ProzesskopieForm.createNewProcess}"
+                             icon="fa fa-floppy-o fa-lg" iconPos="right"
+                             onclick="PF('sticky-notifications').renderMessage({'summary':'#{msgs.processSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
+                             update="notifications"/>
+            <p:button value="#{msgs.abbrechen}" outcome="projects" icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
+        </p:panel>
+    </ui:define>
 
-                    <ui:include src="/WEB-INF/templates/includes/processFromTemplate/processDataEdit.xhtml" />
-
-                </p:tab>
-                <p:tab title="#{msgs.zusaetzlicheDetails}">
-
-                    <ui:include src="/WEB-INF/templates/includes/processFromTemplate/processAdditionalDataEdit.xhtml" />
-
-                </p:tab>
-                <p:tab title="#{msgs.suche}">
-
-                    <ui:include src="/WEB-INF/templates/includes/processFromTemplate/processSearchEdit.xhtml" />
-
-                </p:tab>
-            </p:tabView>
-        </h:form>
-
+    <ui:define name="pageTabView">
+        <p:tabView id="processFromTemplateTabView">
+            <p:tab id="processDataTab" title="#{msgs.prozessdaten}">
+                <ui:include src="/WEB-INF/templates/includes/processFromTemplate/processDataEdit.xhtml" />
+            </p:tab>
+            <p:tab id="additionalDetailsTab" title="#{msgs.zusaetzlicheDetails}">
+                <ui:include src="/WEB-INF/templates/includes/processFromTemplate/processAdditionalDataEdit.xhtml" />
+            </p:tab>
+            <p:tab id="searchTab" title="#{msgs.suche}">
+                <ui:include src="/WEB-INF/templates/includes/processFromTemplate/processSearchEdit.xhtml" />
+            </p:tab>
+        </p:tabView>
     </ui:define>
 
     <ui:define name="dialog">
