Update other parts of applciation to remove usage of statistics

--- a/Kitodo/src/main/webapp/pages/inc_Main/box3.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Main/box3.xhtml
@@ -27,9 +27,9 @@
         <td class="main_statistikboxen_row2">
             <h:panelGrid width="100%" columns="2" columnClasses="columnLinks,columnRechts">
                 <h:outputText value="#{msgs.benutzer}:"/>
-                <h:outputText value="#{StatistikForm.amountUser}"/>
+                <h:outputText value="#{StatistikForm.amountUsers}"/>
                 <h:outputText value="#{msgs.aktiveBenutzer}:"/>
-                <h:outputText value="#{SessionForm.aktiveSessions}"/>
+                <h:outputText value="#{SessionForm.activeSessions}"/>
             </h:panelGrid>
         </td>
     </tr>
