Change value and icon for the searchProcess page button

--- a/Kitodo/src/main/webapp/pages/searchProcess.xhtml
+++ b/Kitodo/src/main/webapp/pages/searchProcess.xhtml
@@ -20,9 +20,9 @@
     <ui:define name="contentHeader">
         <h3>#{msgs.nachEinemBandSuchen}</h3>
         <p:commandButton id="absenden"
-                         value="#{msgs.filterAnwenden}"
+                         value="#{msgs.suche}"
                          action="#{SearchForm.filter}"
-                         icon="fa fa-floppy-o fa-lg"
+                         icon="fa fa-search"
                          iconPos="right"
                          validateClient="true"
                          styleClass="button-filled-blue">
