--- a/Kitodo/src/main/webapp/pages/projectEditDetail.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditDetail.xhtml
@@ -19,7 +19,7 @@
         <p:selectBooleanButton
                 onLabel="#{msgs.locked}" offLabel="#{msgs.unlocked}"
                 onIcon="fa fa-lock fa-lg" offIcon="fa fa-unlock fa-lg"
-                style="left:90%" value="#{ProjekteForm.locked}">
+                value="#{ProjekteForm.locked}">
             <p:ajax event="change" update="editDetailForm"/>
         </p:selectBooleanButton>
     </p:panel>
