--- a/Kitodo/src/main/webapp/pages/projectEditSpecification.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditSpecification.xhtml
@@ -17,12 +17,14 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui">
     <h:outputScript name="js/clipboard.js" target="body" />
-    <p:selectBooleanButton
-            onLabel="#{msgs.locked}" offLabel="#{msgs.unlocked}"
-            onIcon="fa fa-lock fa-lg" offIcon="fa fa-unlock fa-lg"
-            style="left:90%" value="#{ProjekteForm.locked}">
-        <p:ajax event="change" update="technischeDatenForm" />
-    </p:selectBooleanButton>
+    <p:panel>
+        <p:selectBooleanButton
+                onLabel="#{msgs.locked}" offLabel="#{msgs.unlocked}"
+                onIcon="fa fa-lock fa-lg" offIcon="fa fa-unlock fa-lg"
+                value="#{ProjekteForm.locked}">
+            <p:ajax event="change" update="technischeDatenForm" />
+        </p:selectBooleanButton>
+    </p:panel>
     <p:panelGrid id="technischeDatenForm" columns="2" cellpadding="10" layout="grid">
         <p:row>
             <div>
