added value to hidden select on usergroup edit page to prevent warning message

--- a/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
@@ -81,8 +81,7 @@
                                     </h3>
                                     <div style="visibility: hidden;margin-top: 15px">
                                         <p:outputLabel for="hiddenSelect" value="hidden"/>
-                                        <p:selectOneMenu id="hiddenSelect">
-                                        </p:selectOneMenu>
+                                        <p:selectOneMenu id="hiddenSelect" value="hidden"/>
                                     </div>
                                     <p:pickList id="authoritiesGlobalPick"
                                                 showSourceFilter="true" showTargetFilter="true"
